--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "node node_modules/puppeteer/install.js"
   },
   "keywords": [],
   "author": "",
