--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "@slack/bolt": "^3.17.0",
     "dotenv": "^16.3.1",
     "express": "^4.21.2",
-    "puppeteer": "^22.0.0",
-    "@sparticuz/chromium": "^121.0.0"
+    "puppeteer": "^22.0.0"
   },
   "engines": {
     "node": ">=14.0.0"
