--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@slack/bolt": "^3.17.0",
     "dotenv": "^16.3.1",
     "express": "^4.21.2",
-    "puppeteer": "^22.0.0"
+    "puppeteer-core": "^22.0.0",
+    "chrome-aws-lambda": "^10.1.0"
   },
   "engines": {
     "node": ">=14.0.0"
