--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@slack/bolt": "^3.17.0",
     "dotenv": "^16.3.1",
     "express": "^4.21.2",
+    "pdf-lib": "^1.17.1",
     "puppeteer": "^10.1.0"
   },
   "engines": {
